<resources>
    <string name="app_name">GroupUp!</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="noaccounttext">Don\'t have an account? Create one here.</string>
    <string name="forgotpasstext">Forgotten your password? Reset it here.</string>
    <string name="groupup_2021">© GroupUp! 2021 (version 1.0)</string>
    <string name="title">GroupUp!</string>
    <string name="reset_password_button_text">Reset Password</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="username_text">Username</string>
    <string name="temp_long_text">You\'re now signed in, feel free to close the app to go back to the log in screen, unfortunately there isnt any other app functionality developed yet! I am working on adding new features soon though, be sure to look forward to it in the next build!</string>
    <string name="signin_title">Sign in</string>
    <string name="createaccount_title">Create Account</string>
    <string name="forgotpassword_title">Reset Password</string>
    <string name="events_tab_text">Events</string>
    <string name="groups_tab_text">Groups</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempGroupFragmentText">Group functionality to be implemented</string>
    <string name="create_new_event_button_text">Create New Event</string>
    <string name="createevent_title">Create Event</string>
    <string name="event_title">Event Title</string>
    <string name="create_event_button_text">Create Event</string>
    <string name="event_description">Event Description</string>
    <string name="date_of_event">Date of Event</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_3">Address Line 3 (Optional)</string>
    <string name="dd_mm_yy">dd/mm/yy</string>
    <string name="postcode">Postcode</string>
    <string name="location">Location</string>
    <string name="event_type">Event Type</string>
    <string name="time_of_event">Time of Event</string>
    <string name="join_group_button">Join Group</string>
    <string name="event_card_image_content_description">eventGroup card</string>
    <string name="date_and_time_event_card_text_placeholder">Date and Time</string>
    <string name="delete_group_button">Delete Group</string>
    <string name="leave_group_button">Leave Group</string>
    <string name="log_out_button">Log Out</string>
    <string name="change_account_details_button">Change Account Details</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="view_display_name">Display Name:</string>
    <string name="view_email">Email:</string>
    <string name="update_account_details_button">Update Account Details</string>
    <string name="select_image_button">Select Image</string>
    <string name="account_settings">Account Settings</string>
    <string name="type_a_message">Type a message...</string>
    <string name="sender">Sender</string>
    <string name="message">No messages</string>
    <string name="time_sent"></string>
    <string name="name_of_sender"></string>
</resources>