<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewAccountActivity">

    <TextView
        android:id="@+id/view_account_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_email"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/deleteAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_account_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_display_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/changeAccountDetailsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_account_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeAccountDetailsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="changeAccountDetailsButtonClicked"
        android:text="@string/change_account_details_button"
        app:layout_constraintBottom_toTopOf="@+id/logOutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#fbc02d"
        android:onClick="logOutButtonClicked"
        android:text="@string/log_out_button"
        app:layout_constraintBottom_toTopOf="@+id/deleteAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#e53935"
        android:onClick="deleteAccountButtonClicked"
        android:text="@string/delete_account_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>